# climate_code_conversion

./: .gitignore  README.md  codegen.ipynb  dag.py  iterate_response.csv  llm.py  main.py  out.py  preprocess.sh  requirements.txt  setup.cfg  test_out.py  testing.py
_codegen/: .env.example  .gitignore  README.md  config.py  debug.py  generate.py  main.py  messages.py  requirements.txt  testing.py  utils.py
_demos/: README.md  fortran_runtime.txt  gpu_test.py  jax_cpu_runtime.txt  jax_gpu_runtime.txt  jax_version.py  jaxphotosynthesis.ipynb  numpy_runtime.txt  root_finding.py  runtime.ipynb  runtime_benchmarks.py  temp.html  temp.py
_parsing/: README.md  preprocess.sh
_testing/: README.md  set_pfunit_dir
archive/examples/daylength/fortran/: CMakeLists.txt  decompMod.f90  shr_kind_mod.f90  shr_log_mod.f90
fortran/: Makefile  PhotosynthesisMod.f90  README.md  ci_func.f90  hybrid_and_brent.f90  parameter_sweep.f90  speed_bencharking_fortran.txt  speed_benchmarking  speed_benchmarking.f90  test_photosynthesis.pf
notebooks/: 2021-07-15-Me2-05.csv  parameter_estimation.ipynb  photosynthesis.ipynb
output/: dag.html  dag2.html
python_ci_func/: ci_an_graph.py  iterate_response.csv  jax_jit_photosynthesis.py  jax_photosynthesis.py  main.py  numba_an.py  numba_photosynthesis.py  numba_simpler_photosynthesis.py  numpy_photosynthesis.py  photosynthesis.py  requirements.txt  runtime.py  speed_benchmarking.py  speed_benchmarking_jax.txt  speed_benchmarking_jax_jit.txt  speed_benchmarking_npy.txt  speed_benchmarking_numpy_roots.txt  test_ci_func.py  test_jax.py  vjax.py  (+3 more)
(+140 files in other folders)
